fixed margin gaps

--- a/CSS/landing-page.css
+++ b/CSS/landing-page.css
@@ -1,7 +1,7 @@
 body{
   background-image: url(file:///Users/annabelbarham/Documents/Coding%20Course/Code-First-Project/IMAGES/coffeepic.jpg);
   background-size: cover;
-  margin: 30px;
+  margin: 0px;
 }
 
 .description{
@@ -136,7 +136,7 @@ h3 {
     border-color: #b62f26;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 900px) {
 
   .mobileheight {
         height: 100vh;
